# grid_exp_oe

./: .gitignore  LICENSE  README.md  evaluate.py  minigrid_envs.py  pyproject.toml  train.py  train_compare_envs.py
grid_exp_oe/: __init__.py  base.py  common.py  env.py  ppo.py  rnd_ppo.py  running_stats.py
grid_exp_oe/models/: __init__.py  base.py  common.py  conv_actor_critic.py  lstm_conv_actor_critic.py
notebook/: analyze_envs_comprarison_experiments.ipynb
notebooks/: analyze_envs_comprarison_experiments.ipynb
scripts/: eval_harder_generalization.py
