[project]
name = "grid-exp-oe"
version = "0.1.0"
description = "Exploration-heavy Reinforcement Learning for Grid Environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.0",
    "minigrid>=3.0.0",
    "numpy>=2.0.2",
    "pufferlib>=0.1.2",
    "tensorflow[and-cuda]>=2.18.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
